# AdventOfCode

./: .gitignore  README.md  get_input_strings.dart  pubspec.yaml  pyproject.toml
AOC2015/day_01/: puzzle_1.py  puzzle_2.py
AOC2015/day_02/: puzzle_1.py  puzzle_2.py
AOC2021/day_01/: puzzle_1.py  puzzle_2.py
AOC2021/day_02/: puzzle_1.py  puzzle_2.py
AOC2021/day_03/: puzzle_1.py  puzzle_2.py
AOC2021/day_04/: puzzle_1.py  puzzle_2.py
AOC2021/day_05/: puzzle_1.py  puzzle_2.py
AOC2021/day_06/: puzzle_1.py  puzzle_2.py
AOC2021/day_07/: puzzle_1.py  puzzle_2.py
AOC2021/day_08/: puzzle_1.py  puzzle_2.py
AOC2021/day_09/: puzzle_1.py  puzzle_2.py
AOC2021/day_10/: puzzle_1.py  puzzle_2.py
AOC2021/day_11/: puzzle_1.py  puzzle_2.py
AOC2021/day_12/: puzzle_1.py  puzzle_2.py
AOC2021/day_13/: puzzle2_test_output.txt  puzzle_1.py  puzzle_2.py
AOC2021/day_14/: puzzle_1.py  puzzle_2.py
AOC2021/day_15/: puzzle_1.py  puzzle_2.py
AOC2022/day_01/: puzzle_01.py  puzzle_1.py  puzzle_2.py
AOC2022/day_02/: puzzle_1.py  (+1 more)
AOC2024/: puzzle_1.dart  puzzle_2.dart
day_01/: puzzle_1.py  puzzle_2.py
day_02/: puzzle_1.py  puzzle_2.py
day_03/: puzzle_1.py  puzzle_2.py
day_04/: puzzle_1.py  puzzle_2.py
day_05/: demo.py  puzzle_1.py  puzzle_2.py
day_06/: demo.py  puzzle_1.py  puzzle_2.py  puzzle_2_test.py
day_07/: puzzle_1.py  puzzle_2.py
day_08/: puzzle_2.py
day_09/: puzzle_1.py  puzzle_2.py
day_10/: puzzle_1.py
day_11/: puzzle_2.py
day_13/: puzzle2_output.txt  puzzle_1.py  puzzle_2.py
day_14/: puzzle_1.py  puzzle_2.py
day_15/: puzzle_1.py
(+53 files in other folders)
