[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = "My solutions of AdventOfCode2021 in Python and NumPy"
authors = ["jiri.one <nemec@jiri.one>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
